--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
 Hello there!
 
-TODO: build my own website.
+
+Learning: Piano
+
+Listening: 耳朵-李荣浩 https://music.apple.com/cn/album/%E8%80%B3%E6%9C%B5/1438734966?i=1438735302
+
+Playing: Black Myth - Wu Kong
