--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
-Hello there!
+Hello there!<br>
+<br>
+<br>
+Learning: Piano<br>
 
-
-Learning: Piano
-
-Listening: 耳朵-李荣浩 https://music.apple.com/cn/album/%E8%80%B3%E6%9C%B5/1438734966?i=1438735302
-
+Listening: 耳朵-李荣浩 https://music.apple.com/cn/album/%E8%80%B3%E6%9C%B5/1438734966?i=1438735302<br>
+<br>
 Playing: Black Myth - Wu Kong
